fixed padding alignment in hero section

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    color: #4ade80;
+    color: #f26a21;
 }
 
 /* Hamburger Menu */
@@ -108,7 +108,7 @@ header nav ul li a:hover {
 }
 
 .side-nav ul li a:hover {
-    color: #4ade80;
+    color: #f26a21;
 }
 
 .close-btn {
@@ -277,12 +277,12 @@ header nav ul li a:hover {
   font-weight: 800;
   font-size: 250%;
   font-family: 'Bebas Neue', sans-serif;
-  padding: 0 0.6rem;
+  padding: 0 1.2rem;
 }
 
 .Big-text-paragraph{
   font-size: 98%;
-  padding: 0 0.6rem;
+  padding: 0 1.2rem;
   position: relative;
   display: inline-flex;
   flex-wrap: wrap;
@@ -294,6 +294,10 @@ header nav ul li a:hover {
   flex-direction: column;
 }
 
+.hero-cta{
+  padding: 0 1.2rem;
+}
+
 .cta-btn, .btn {
   transition: all 0.3s ease-in-out;
   font-family: "Dosis", sans-serif;
@@ -302,7 +306,7 @@ header nav ul li a:hover {
 .cta-btn, .btn {
   width: auto;
   height: 60px;
-  padding: 0 1rem;
+  padding: 0 1.2rem;
   border-radius: 50px;
   background-image: linear-gradient(135deg, #ea5455 0%, #f26a21 100%);
   box-shadow: 0 20px 30px -6px rgba(238, 103, 97, 0.5);
